feat(service): enhance business logic (reports, skills, portfolio, experience)